fix: fix unexpected bypass for super admin
